--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/src/assets/images/logo.svg" />
+  <link rel="icon" type="svg+xml" href="/src/assets/images/logo.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Efood App</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
